Added the Multilayer Network.

--- a/Multilayer perceptron/1_SingleNeuron.ipynb
+++ b/Multilayer perceptron/1_SingleNeuron.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1) Single neuron"
+    "# 1) Single Neuron"
    ]
   },
   {
