--- a/Multilayer perceptron/2_SingleLinearLayer.ipynb
+++ b/Multilayer perceptron/2_SingleLinearLayer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2) Single layer linear network"
+    "# 2) Single Layer Linear Network"
    ]
   },
   {
