--- a/Multilayer perceptron/3_NonLinearLayer.ipynb
+++ b/Multilayer perceptron/3_NonLinearLayer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3) Non-linear single layer network"
+    "# 3) Non-Linear Single Layer Network"
    ]
   },
   {
@@ -18,8 +18,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Jusqu'à présent, notre réseau est purement linéaire et seule une relation linéaire peut-être trouvée entre les entrées et les sorties. Ajouter d'autres couches après la première ne changerait rien à cela car on ne ferait que des opérations entre matrice; ce qui reste linéaire. Il faut donc directement ajouter une fonction non-linéaire à notre couche. Pour cela, on applique une fonction non-linéaire après avoir appliqué nos poids et notre biais aux entrées du neurone. Dans notre cas, on aimerait garder des sorties qui sont définies sur l'ensemble des réelles positifs, on utilisera donc la fonction $\\mathrm{LReLu}$ (Leaky Rectified Linear Unit) définie comme suit\n",
-    "\n",
     "So far, our network is purely linear and only a linear relationship can be found between inputs and outputs. Adding other layers after the first one wouldn't change anything because we'd only be doing operations between matrices, which is still linear. So we need to add a non-linear function directly to our layer. To do this, we apply a non-linear function after applying our weights and bias to the neuron's inputs. The general consensus is that it does not matter which non-linear function is used so the simpler the better. In our case, we'll use the function $\\mathrm{LReLu}$ (Leaky Rectified Linear Unit) defined as follows\n",
     "\n",
     "\\begin{equation}\n",
